--- a/LessonPlanSys/src/main/resources/application.properties
+++ b/LessonPlanSys/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=LessonPlanSys
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/proj2
+
+spring.jpa.properties.hibernate.default_schema=app
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
