modified:   LessonPlanSys/src/main/resources/application.properties 	new file:   LessonPlanSys/src/main/resources/data.sql 	new file:   LessonPlanSys/src/main/resources/schema.sql 	modified:   LessonPlanSys/target/classes/application.properties

--- a/LessonPlanSys/src/main/resources/application.properties
+++ b/LessonPlanSys/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-#server.address=${ADDRESS}
+# spring.application.name=backend
+# spring.datasource.url=jdbc:postgresql://trng2044-rds-1.chueiwozbnfz.us-east-1.rds.amazonaws.com:5432/Group2
+# spring.datasource.username=group2user
+# spring.datasource.password=Train2044group2
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.properties.hibernate.default_schema=project2Andrew
+
+# Tells spring to use the schema and data in teh resource folder
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+
+spring.application.name=backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/<REPLACE WIHT YHOUR DB NAME>
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.properties.hibernate.default_schema=<REPLACE WIHT YOUR SCHEMQA>
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=public
-spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
