--- a/LessonPlanSys/src/main/resources/application.properties
+++ b/LessonPlanSys/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.application.name=Project1
-spring.datasource.url=jdbc:postgresql://localhost:5432/test1
-spring.jpa.properties.hibernate.default_schema=pro3
-spring.datasource.username=postgres
-spring.datasource.password=
-spring.jpa.generate-ddl=true
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#server.address=${ADDRESS}
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create-drop
