--- a/LessonPlanSys/.gitignore
+++ b/LessonPlanSys/.gitignore
@@ -32,3 +32,5 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
+src/main/resources/application.properties
+
