modified:   .gitignore 	modified:   LessonPlanSys/.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 LessonPlanSys/.vscode/settings.json
 LessonPlanSys/.env
 LessonPlanSys/target/classes/application.properties
+LessonPlanSys/target/classes/application.properties
