--- a/LessonPlanSys/.gitignore
+++ b/LessonPlanSys/.gitignore
@@ -33,4 +33,5 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 src/main/resources/application.properties
+/target/
 
