modified:   .gitignore 	# modified:   LessonPlanSys/target/classes/application.properties

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ LessonPlanSys/target/classes/application.properties
 LessonPlanSys/target/classes/application.properties
 LessonPlanSys/src/main/resources/application-dev.properties
 LessonPlanSys/src/main/resources/application-prod.properties
+LessonPlanSys/target/classes/application.properties
