--- a/LessonPlanSys/pom.xml
+++ b/LessonPlanSys/pom.xml
@@ -77,6 +77,7 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+		<!--
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
@@ -88,7 +89,7 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<version>3.2.3</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
