modified:   .gitignore 	new file:   LessonPlanSys/.dockerignore 	new file:   LessonPlanSys/Dockerfile 	new file:   LessonPlanSys/docker-compose.debug.yml 	new file:   LessonPlanSys/docker-compose.yml 	modified:   LessonPlanSys/target/classes/application.properties 	modified:   LessonPlanSys/target/classes/com/example/LessonPlanSys/Controller/ForumPostController.class 	modified:   LessonPlanSys/target/classes/com/example/LessonPlanSys/Model/ForumPost.class 	modified:   LessonPlanSys/target/classes/com/example/LessonPlanSys/Repo/ForumPostRepo.class 	modified:   LessonPlanSys/target/classes/com/example/LessonPlanSys/Service/ForumPostService.class

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ LessonPlanSys/target/classes/application.properties
 LessonPlanSys/target/classes/application.properties
 LessonPlanSys/src/main/resources/application-dev.properties
 LessonPlanSys/src/main/resources/application-prod.properties
+LessonPlanSys/secrets/db_password.txt
+LessonPlanSys/secrets/db_url.txt
+LessonPlanSys/secrets/db_username.txt
