--- a/LessonPlanSys/pom.xml
+++ b/LessonPlanSys/pom.xml
@@ -59,7 +59,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
 			<version>0.12.6</version>
@@ -75,7 +75,39 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.12.6</version>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
+
+
+<dependency>
+
+    <groupId>io.jsonwebtoken</groupId>
+
+    <artifactId>jjwt-api</artifactId>
+
+    <version>0.11.2</version>
+
+</dependency>
+
+<dependency>
+
+    <groupId>io.jsonwebtoken</groupId>
+
+    <artifactId>jjwt-impl</artifactId>
+
+    <version>0.11.2</version>
+
+</dependency>
+
+<dependency>
+
+    <groupId>io.jsonwebtoken</groupId>
+
+    <artifactId>jjwt-jackson</artifactId>
+
+    <version>0.11.2</version>
+
+</dependency>
+
 		<dependency>
     <groupId>org.springdoc</groupId>
     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
