--- a/LessonPlanSys/docker-compose.yml
+++ b/LessonPlanSys/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -24,7 +22,7 @@ services:
       - "9092:9092"
 
   app:
-    build: # This section defines the build context for the 'app' service
+    build:
       context: .
       dockerfile: Dockerfile
     image: my-custom-app:latest
@@ -44,6 +42,3 @@ services:
 networks:
   kafka_network:
     driver: bridge
-
-
-
